# myTinyCompiler

./: README.md
lex/: CMakeLists.txt  TokenTable  dfa.cpp  dfa.h  grammar3.txt  lex.cpp  nfa.cpp  nfa.h  para.h  scanner.cpp  scanner.h  singleton.h  test.txt  token.h
syn/: CMakeLists.txt  grammar2.txt  input.cpp  input.h  para.h  parse.cpp  parse.h  syn.cpp  token.h
